// 伙伴幻化
message m_pet_change_toc {
optional  int32  err_code=1[default=0]; 
optional  int32  cur_id=2[default=0]; //伙伴幻化id
}

